some bugfixes to wf_toolbar classes

--- a/resources/style/webfacestyle.css
+++ b/resources/style/webfacestyle.css
@@ -70,6 +70,7 @@ div.ws_main div.wf_titlebar div.wf_titlebar_icon{
 }
 
 /* Main */
+
 div.ws_main div.wf_titlebar{
 	height: 22px;
 	background: url(images/bg_titlebar.gif) repeat-x;
@@ -268,23 +269,32 @@ div.wf_titlebar, div.wf_toolbar{
 .wf_titlebar .wf_titlebar_icon{
 	float:left;
 }
-
+*/
 .wf_titlebar .wf_toolbar{
 	float:right;
-	margin:2px;
-	padding:0px;
-	height: 18px;
 	border-top-width: 0px;
 	border-right-width: 0px;
 	border-bottom-width: 0px;
 	border-left-width: 0px;
 }
-*/
+
+.wf_toolbar{
+	margin:2px;
+	padding:0px;
+	height: 18px;
+}
+
 .wf_toolbar * {
 	display: inline-block;
 	vertical-align: middle;
 	margin: 2px;
 	padding: 0px;
+}
+
+
+.wf_toolbar li{
+	display: inline;
+	list-style: none;
 }
 
 .wf_toolbar_button span{
