--- a/resources/style/webfacestyle.css
+++ b/resources/style/webfacestyle.css
@@ -11,6 +11,33 @@
 	background: #fff;
 	position: relative;
 }
+
+.builder .wf_frame, .user .wf_frame {
+	position: absolute;
+	left: 0;
+	right: 0;
+	bottom: 0 !important;
+	top: 80px;
+	overflow: hidden;
+}
+
+.wf_frame .wf_blockmainarea {
+	top: 0;
+	position: absolute;
+	right: 0;
+	left: 0;
+	bottom: 0;
+}
+
+.wf_frame .wf_blockmainarea iframe {
+	top: 0;
+	position: absolute;
+	right: 0;
+	left: 0;
+	bottom: 0;
+	height: auto !important;
+}
+
 div.wf_tabbarmainarea{
 	padding: 30px 0 0;
 	position: relative;
